syntax = "proto3";

package emailproto;

message ClientMessage {
    uint64 id = 1;
    oneof message_type {
        AckResponse         ack_response          = 2;
        NoopRequest         noop_request          = 3;
        StartupRequest      startup_request       = 4;
        ErrorResponse       error_response        = 5;
        GetAccountsRequest  get_accounts_request  = 6;
        GetSnapshotsRequest get_snapshots_request = 7;
    }
}

message ServerMessage {
    uint64 id = 1;
    oneof message_type {
        AckResponse          ack_response           = 2;
        NoopRequest          noop_request           = 3;
        ErrorResponse        error_response         = 4;
        ClaimRequest         claim_request          = 5;
        ConfigChangedRequest config_changed_request = 6;
        StartupResponse      startup_response       = 7;
        GetAccountsResponse  get_accounts_response  = 8;
        GetSnapshotsResponse get_snapshots_response = 9;
    }
}

message Account {
    string id                  = 1;
    string service_instance_id = 2;
    string name                = 3;
    string email               = 4;
    string first               = 5;
    string last                = 6;
    string display_name        = 7;
    bytes password             = 8;
}

message AckResponse {
}

message ClaimRequest {
    string token = 1;
}

message ConfigChangedRequest {
    map<string,bytes> hashes_by_table = 1;
}

message ErrorResponse {
    string error = 1;
}

message GetAccountsRequest {
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

message GetSnapshotsRequest {
}

message GetSnapshotsResponse {
    repeated Snapshot snapshots = 1;
}

message NoopRequest {
}

message Snapshot {
    string id       = 1;
    string agent_id = 2;
    string name     = 3;
}

message StartupRequest {
}

message StartupResponse {
    map<string,bytes> config_hashes_by_table = 1;
}
